sample-app/k8s-resources/guestbook-https/guestbook-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # If you're using Cert-Manager
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - guestbook.assafdori.com  # Replace with your actual domain
    secretName: guestbook-tls  # This will store the TLS certificate
  rules:
  - host: guestbook.assafdori.com  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
